add Readme file

--- a/html/index.html
+++ b/html/index.html
@@ -112,7 +112,7 @@
     </section>
     <!-- the end of the services section -->
     <!-- the start of the protfolio -->
-    <section class="protfolio">
+    <section class="protfolio" id="portfolio">
         <div class="container">
             <div class="title">
                 <h1>portfolio</h1>
@@ -144,7 +144,7 @@
     </section>
      <!-- the end of the protfolio -->
      <!-- the start of the about section -->
-     <section class="about">
+     <section class="about" id="about">
          <div class="container">
              <div class="title">
                  <h1>About</h1>
@@ -166,7 +166,7 @@
      </section>
      <!-- the end of the about section -->
      <!-- the start of the contact section -->
-     <section class="contact">
+     <section class="contact" id="contact">
          <div class="container">
             <div class="title">
                 <h1>contact</h1>
